# genshin-alerts

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml
src/genshin_alerts/: cli.py  config.py  driver.py
src/genshin_alerts/extractor/: __init__.py  base.py  gensh_in_extractor.py
src/genshin_alerts/fetcher/: __init__.py  base.py  genshin_gift_code_fetcher.py
src/genshin_alerts/model/: __init__.py  gift_entry.py  notifier_input.py
src/genshin_alerts/notifier/: __init__.py  base.py  discord.py
